<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterDetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/created"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_episodes" />

    <TextView
        android:id="@+id/episode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/episode"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/locstion"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_origin" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/origin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_gender" />

    <TextView
        android:id="@+id/character_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/episode"
        app:layout_constraintTop_toBottomOf="@+id/character_location" />

    <TextView
        android:id="@+id/character_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/character_episodes"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/character_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/gender_text"
        app:layout_constraintTop_toBottomOf="@+id/character_species"
        tools:text="@string/status" />


    <TextView
        android:id="@+id/character_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/character_origin"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/character_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/specy"
        app:layout_constraintTop_toBottomOf="@+id/character_status"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/character_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        app:layout_constrainedWidth="true"
        android:fontFamily="@font/calibari_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/origin"
        app:layout_constraintTop_toBottomOf="@+id/character_gender"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/gender_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_species" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/character_image_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/male_symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/status"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_image_detail" />


    <TextView
        android:id="@+id/character_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/calibari_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/status"
        app:layout_constraintTop_toBottomOf="@+id/character_image_detail"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/specy"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibari_regular"
        android:text="@string/specy"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_status" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>